# mms_curvature

./: .gitignore  .load_cdf.py.swp  .mms_curvature.pro.swp  .mms_curvature.py.swo  .mms_curvature.py.swp  .mms_load_data.py.swp  .mms_load_data_shims.py.swp  CHANGELOG.md  CONDUCT.md  Curvature_Runner_v4.py  LICENSE  README.md  __init__.py  dataload_parallel.py  dataload_sample.py  dataload_spedas.py  load_cdf.py  load_datafile.py  mms_curvature.pro  mms_curvature.py  mms_load_data.py  mms_load_data_shims.py  mms_sdc_api_client.py  mms_utils.py  pyproject.toml  requirements.txt  setup.cfg  test_compare.py
IDL/: mms_curvature.pro
mms/: load_cdf.py  mms_load_data.py  mms_load_data_shims.py  mms_sdc_api_client.py  mms_utils.py
src/mms_curvature/: __init__.py  dataload_sample.py  load_datafile.py  mms_curvature.py
src/mms_curvature.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
utils/: .Curvature_runner_tim1.py.swp  .mms_bcurl.py.swp  .uncertainty.py.swp  Curvature_Runner_v4.py  Curvature_Runner_v5.py  Curvature_runner_tim1.py  mms_Rerr.py  mms_TQF.py  mms_bcurl.py  mms_gyroradius.py  uncertainty.py
