[metadata]
name = mms_curvature
version = 0.9.0
description = Calculate the magnetic field curvature at the mesocenter of the MMS fleet in tetrahedron formation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daneah/publishing-python-packages
author = Anthony Rogers
author_email = "Anthony Rogers" <arogers@lanl.gov>
license = Apache Software License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.9
package_dir =
    =src
packages = find_namespace:
include_package_data = True
install_requires =
    requests
    cdflib
    numpy < 2
    pandas
    pyspedas

[options.packages.find]
where = src
exclude =
    test*

######################
# Tool configuration #
######################

[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = mms_curvature
branch = True

[coverage:report]
fail_under = 100.0
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/mms_curvature
    */site-packages/mms_curvature

[tox:tox]
envlist = py39,py310
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
    pytest
    types-termcolor
commands =
    mypy --ignore-missing-imports {posargs:src test}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src test}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src test}

[testenv:docs]
deps =
    sphinx
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/mms_curvature/ \
        src/mms_curvature/*.c \
        src/mms_curvature/*.so
    sphinx-build -n -W --keep-going -b html docs/ docs/_build/

[testenv:devdocs]
deps =
    sphinx
    sphinx-autobuild
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/mms_curvature/ \
        src/mms_curvature/*.c \
        src/mms_curvature/*.so
    sphinx-autobuild -n -W -b html docs/ docs/_build/
